@@ -30,7 +30,7 @@ void write_back( PdfParser* pParser, const char* pszFilename )
     PdfWriter writer( pParser );
 
     //writer.SetUseXRefStream( true );
-    writer.SetLinearized( true );
+    //writer.SetLinearized( true );
     writer.SetPdfCompression( true );
     writer.Write( pszFilename );
 }
